# SAI-P4-BM

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  p4-bmv2_1.0.0_amd64.changes
debian/: changelog  control  rules
example/lacp-teaming/: .gitignore  Makefile.am  clean_netdev.sh  configure.ac  install_deps.sh  lacp_teaming_sai.c  veth_setup_lacp.sh  veth_teardown_lacp.sh
example/stam/: Makefile.am  configure.ac  stam  stam.c
lacp-teaming/: Makefile  Makefile.am  README.md  clean_host5.sh  clean_netdev.sh  install_deps.sh  lacp_1.conf  lacp_1_no_ports.conf  lacp_2.conf  lacp_teaming_sai  lacp_teaming_sai.c  lacp_teaming_sai.cpp  run_daemon.sh  teamd_host5.sh  teamd_sw.sh  teamd_sw_no_ports.sh  teaming.sh
lacp-teaming/new_monitor/: Makefile  new_monitor  new_monitor.c
p4-softswitch/: Makefile.am  README.md
p4-softswitch/debian/: changelog  control  files  rules
p4-softswitch/libp4bm/: Makefile
p4-softswitch/targets/P4-SAI/: .gitignore  Makefile.am  compile_json.sh  copy_to_cpu_test_commands.txt  run_bridge.sh  run_router.sh  run_server.sh  runtime_CLI_bridge  sai.json  sai_bridge.json  sai_router.json  simple_switch.cpp  veth_setup.sh  (+1 more)
p4-switch/: .gitignore  Makefile.am  README.md  build.sh  configure.ac
p4-switch/debian/: control
p4-switch/debian/.debhelper/bucket/: index
p4-switch/p4-sai/: Makefile.am  run_bm.sh  veth_teardown_ptf.sh
p4-switch/sai-p4-target/: .gitignore  Makefile.am  compile_json.sh  compile_json_16.sh  log_16.txt  primitives.cpp  run_bm.sh  run_bm_16.sh  run_bridge.sh  runtime_CLI_bridge  runtime_CLI_router  sai_bm.json  sai_bm_16.json  simple_switch.cpp  simple_switch.h  veth_setup.sh  veth_teardown.sh
p4-switch/sai-p4-target/default_config/: bridge_default_config.txt  default_config.txt  default_config_mirror.txt  router_default_config.txt
p4-switch/sai-p4-target/inc/: flexsdk.h  flextrum_types.h  my_bitmap.h  sharedlib.h
p4-switch/sai-p4-target/p4src/: bridge.p4  port.p4  router.p4  sai_bm.p4
p4-switch/sai-p4-target/p4src-old/bridge/: actions.p4
p4-switch/sai-p4-target/p4src-old/router/: sai_router.p4  tables.p4
p4-switch/sai-p4-target/p4src/bridge/: DefaultConfig.txt  sai_bridge.p4  tables.p4
p4-switch/sai-p4-target/p4src/inc/: checksum.p4  common_actions.p4  constants.p4  defines.p4  field_lists.p4  headers.p4  metadata.p4  parser.p4  sai_model.p4
p4-switch/sai-p4-target/p4src/inc-old/: defines.p4
p4-switch/sai-p4-target/p4src/router/: DefaultConfigMirror.txt  actions.p4  sai_router.p4  tables.p4
p4-target/: .gitignore  Makefile.am  compile_json.sh  configure.ac  main.cpp  run_server.sh  runtime_CLI  sai_bridge.json  simple_switch  simple_switch.cpp  sswitch_CLI  veth_setup_ptf.sh  veth_teardown.sh
p4-target/logs/: ptf.html
p4-target/logs/scripts/: animate_flow.py  log_aggregation.py
p4-target/logs/visio/: adding_SVG_instructions.md
p4-target/p4src/bridge/: DefaultConfig.txt
p4-target/sswitch_runtime/: SimpleSwitch-remote  SimpleSwitch.py  __init__.py
sai-host_interface/: README.md
sai-host_interface/saithrift/: SaiCppServer.cpp
sai-host_interface/src/: sai_object.cpp  sai_object.h  sai_object_interface.h  switch_meta_data.h
sai-p4-target/: .gitignore
sai-p4-target/logs/: .gitignore
sai_adapter/: .gitignore  Makefile  Makefile.am  Makefile_old  README.md  configure.ac  install_deps.sh
sai_adapter/.pc/a/: configure.ac
sai_adapter/.pc/a/test/sai_thrift_server/: Makefile.am
sai_adapter/debian/: README.Debian  README.source  changelog  control  debhelper-build-stamp  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  p4-sai-adapter.cron.d.ex  p4-sai-adapter.default.ex  p4-sai-adapter.doc-base.EX  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
sai_adapter/debian/p4-sai-adapter/DEBIAN/: control  md5sums
sai_adapter/debian/p4-sai-adapter/usr/share/doc/p4-sai-adapter/: copyright
sai_adapter/debian/patches/: a  b
sai_adapter/inc/: Makefile.am  sai_adapter.h  sai_adapter_interface.h  sai_hostif_table.h.old  sai_object.h  switch_meta_data.h  tun_if.h
sai_adapter/p4-switch/: Makefile.am  runtime_CLI  sai_router.json
sai_adapter/src/: Makefile  Makefile.am  Makefile_old  sai.c  sai_adapter.cpp  sai_adapter.cpp2  sai_adapter.h  sai_adapter_interface.cpp  sai_hostif_table.cpp.old  sai_object.cpp  sai_object.h  sai_object.h.orig  sai_object_interface.cpp  sai_object_interface.cpp.orig  sai_object_interface.h  sai_sniffer.cpp  saiacl.cpp  saibridge.cpp  saibuffer.cpp  saifdb.cpp  saihash.cpp  saihostif.cpp  saiipmc.cpp  saiipmcgroup.cpp  sail2mc.cpp  sail2mcgroup.cpp  sailag.cpp  saimcastfdb.cpp  saimirror.cpp  saineighbor.cpp  sainexthop.cpp  saipolicer.cpp  saiport.cpp  saiqosmap.cpp  saiqueue.cpp  sairoute.cpp  sairouter_if.cpp  sairpfgroup.cpp  saisamplepacket.cpp  saischeduler.cpp  (+10 more)
sai_adapter/test/: Makefile  Makefile.am  sai_types.py
sai_adapter/test/learn_app/: Makefile  learn_app.c
sai_adapter/test/ptf_tests/: .gitignore  Makefile  Makefile.am  port_map.ini  run_ptf.sh  run_ptf_1Q_B_A2A_test.sh  run_ptf_c.sh  run_ptf_l2.sh  run_ptf_l2_old.sh  run_ptf_l2_tests.sh  run_ptf_l3.sh  run_ptf_loop.sh  run_ptf_sai_repo.sh  sai_types.py  stam.sh  stam_py.py
sai_adapter/test/ptf_tests/tests/: sail2_new.py  sail3.py  switch.py
sai_adapter/test/ptf_tests/tests-sai-repo/: saihostif.py  switch.py
sai_adapter/test/ptf_tests/tests_new/: sai_base_test.py  saihostif.py  sail2.py  switch.py
sai_adapter/test/ptf_tests/tests_old/: sail2_new.py  sail3.py  switch.py
sai_adapter/test/sai_thrift_development_python_server/: switch_sai_server.py
sai_adapter/test/sai_thrift_server/: .gitignore  Makefile  Makefile.am  SaiCppServer.cpp  port_obj  run_server.sh
sai_adapter/test/sai_thrift_src/: Makefile  Makefile.am  switch_sai.thrift
sai_adapter/test/unittest/: Makefile
sai_adapter/test/unittest/logs/: log.txt
targets/P4-SAI/: .gitignore  DefaultConfig.txt  README.md  cli_driver.py  compile_json.sh  log.txt  nanomsg_client  run_server.sh  runtime_CLI  sai.json  simple_switch.cpp  test.py  veth_setup.sh  veth_teardown.sh
(+138 files in other folders)
