nobase_include_HEADERS = sai/saiacl.h \
						 sai/saimirror.h \
						 sai/saischedulergroup.h \
						 sai/saibridge.h \
						 sai/saineighbor.h \
						 sai/saischeduler.h \
						 sai/saibuffer.h \
						 sai/sainexthopgroup.h \
						 sai/saistatus.h \
						 sai/saifdb.h \
						 sai/sainexthop.h \
						 sai/saistp.h \
						 sai/sai.h \
						 sai/saiobject.h \
						 sai/saiswitch.h \
						 sai/saihash.h \
						 sai/saipolicer.h \
						 sai/saitunnel.h \
						 sai/saihostif.h \
						 sai/saiport.h \
						 sai/saitypes.h \
						 sai/saiipmcgroup.h \
						 sai/saiqosmap.h \
						 sai/saiudf.h \
						 sai/saiipmc.h \
						 sai/saiqueue.h \
						 sai/saivirtualrouter.h \
						 sai/sail2mcgroup.h \
						 sai/sairoute.h \
						 sai/saivlan.h \
						 sai/sail2mc.h \
						 sai/sairouterinterface.h \
						 sai/saiwred.h \
						 sai/sailag.h \
						 sai/sairpfgroup.h \
						 sai/saimcastfdb.h \
						 sai/saisamplepacket.h

noinst_HEADERS = sai_adapter.h \
				 sai_adapter_interface.h \
				 switch_meta_data.h \
				 tun_if.h

